--- a/style.css
+++ b/style.css
@@ -66,17 +66,198 @@ body{
     background-color: aliceblue;
     transition: 1s;
 }
-H1{
+H2{
     position: absolute;
     top: 50%;
     left: 10%;
     transform: translate(-50%,-50%);
+    font-size: 3em;
     font-family: 'Courier New', Courier, monospace;
+    display: none;
+    transition: 1s;
 }
+.links{
+    position: absolute;
+    right: 10%;
+    top: 30%;
+    display: flex;
+    justify-content: flex-end;
+}
+a {
+    display: block;
+    color: black;
+    text-decoration: none;
+}
+
+.codepen {
+    display: block;
+    cursor: pointer;
+    padding: 8px 30px;
+    font-size: .75em;
+    letter-spacing: .35em;
+    text-align: center;
+    text-transform: uppercase;
+    border: 1px solid hsla(0,0%,100%,.2);
+    transition: all .2s ease;
+}
+
+.codepen:before, 
+.codepen:after {
+    content: 'CODEPEN';
+    position: absolute;
+    top: 0;
+    right: 0;
+    padding: 8px 0;
+    width: 50%;
+    -webkit-clip: rect(0px, 0px, 0px, 0px);
+    clip: rect(0px, 0px, 0px, 0px);
+    background: #fff;
+    color: #000;
+}
+
+.codepen:before {
+    right: -2px;
+    top: -2px;
+    text-shadow: 2px 0 #fff;
+    box-shadow: 2px 0 #fff;
+}
+
+.codepen:after {
+    right: 2px;
+    bottom: -2px;
+    text-shadow: -1px 0 #fff;
+    box-shadow: -1px 0 #fff;
+}
+
+.codepen:hover {
+    background: white;
+    color: black;
+}
+
+.codepen:hover:before {
+    animation: glitch-test 1.5s infinite linear alternate-reverse;
+}
+
+.codepen:hover:after {
+    animation: glitch-test 2s infinite linear alternate;
+}
+  
+.github {
+    display: block;
+    cursor: pointer;
+    padding: 8px 30px;
+    font-size: .75em;
+    letter-spacing: .35em;
+    text-align: center;
+    text-transform: uppercase;
+    border: 1px solid hsla(0,0%,100%,.2);
+    transition: all .2s ease;
+}
+
+.github:before, 
+.github:after {
+    content: 'GITHUB';
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding: 8px 0;
+    width: 50%;
+    -webkit-clip: rect(0px, 0px, 0px, 0px);
+    clip: rect(0px, 0px, 0px, 0px);
+    background: #fff;
+    color: #000;
+}
+
+.github:before {
+    left: -3px;
+    top: -2px;
+    text-shadow: 2px 0 #fff;
+    box-shadow: 2px 0 #fff;
+}
+
+.github:after {
+    left: 2px;
+    bottom: -2px;
+    text-shadow: -1px 0 #fff;
+    box-shadow: -1px 0 #fff;
+}
+
+.github:hover {
+    background: white;
+    color: black;
+}
+
+.github:hover:before {
+    animation: glitch-test 1.5s infinite linear alternate-reverse;
+}
+
+.github:hover:after {
+    animation: glitch-test 2s infinite linear alternate;
+}
+
+
+@keyframes glitch-test {
+0% {
+    clip: rect(-3px, 600px, 0px, 0px);
+}
+5.88235% {
+    clip: rect(0px, 600px, 0px, 0px);
+}
+11.76471% {
+    clip: rect(-3px, 600px, 0px, 0px);
+}
+17.64706% {
+    clip: rect(-3px, 600px, 0px, 0px);
+}
+23.52941% {
+    clip: rect(100px, 600px, 100px, 0px);
+}
+29.41176% {
+    clip: rect(0px, 600px, 600px, 0px);
+}
+35.29412% {
+    clip: rect(100px, 600px, 0px, 0px);
+}
+41.17647% {
+    clip: rect(0px, 600px, 600px, 0px);
+}
+47.05882% {
+    clip: rect(100px, 600px, 0px, 0px);
+}
+52.94118% {
+    clip: rect(-3px, 600px, 0px, 0px);
+}
+58.82353% {
+    clip: rect(100px, 450px,100px, 0px);
+}
+64.70588% {
+    clip: rect(0px, 450px, 0px, 0px);
+}
+70.58824% {
+    clip: rect(100px, 450px, 100px, 0px);
+}
+76.47059% {
+    clip: rect(0px, 450px, 0px, 0px);
+}
+82.35294% {
+    clip: rect(0px, 450px, 0px, 0px);
+}
+88.23529% {
+    clip: rect(0px, 450px, 0px, 0px);
+}
+94.11765% {
+    clip: rect(0px, 450px, 0px, 0px);
+}
+100% {
+    clip: rect(0px, 450px, 0px, 0px);
+}
+}
+  
+
 .contents{
     background-color: aliceblue;
     position: absolute;
-    top: 115%;
+    top: 100%;
     left: 50%;
     transform: translate(-50%);
     width: 80%;
@@ -86,57 +267,322 @@ H1{
     flex-direction: column;
     border-radius: 30px;
     height: auto;
+    padding-top: 5%;
 }
 
 .myPicture{
-    position: absolute;
+    position: fixed;
     border-radius: 50%;
-    top: 100vh;
-    left: 50%;
+    top: 0;
+    left: 6%;
     transform: translate(-50%);
     height: auto;
-    width: 12vw;
+    width: 6vw;
     margin-bottom: 0vh;
     z-index: 5;
+    border: aliceblue 3px solid;
+    display: none;
+    transition: 1s;
 }
 
 /*cards*/
-#shadowbox{
-    position: fixed;
-    background: rgba(0, 0, 0, 0.5);
-    bottom: 0;
-    left: 0;
-    opacity: 0;
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-    right: 0;
-    top: 0;
-    visibility: hidden;
-    z-index: 10;
-    -webkit-transition: opacity 200ms linear;
-    -moz-transition: opacity 200ms linear;
-    -ms-transition: opacity 200ms linear;
-    -o-transition: opacity 200ms linear;
-    transition: opacity 400ms linear;
+.Name{
+    position: absolute;
+    transform: translate(-50%,-50%);
+    top : 55%;
+    left: 70%;
+    width: 40%;
     display: flex;
-    justify-content: space-around;
-    align-items: center;
+    flex-direction: column;
+    color: azure;
+    font-size: 3em;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
+.myTitle{
+    position: absolute;
+    top: 90%;
+    width: 150%;
+    font-weight: 5;
+    line-height: 1.2;
+    color: #fff;
+    letter-spacing: 5px;
+    z-index: 1;
+}
+.glitch { 
+    font-weight: 5;
+    line-height: 1.2;
+    letter-spacing: 5px;
+    z-index: 1;
+ }
+ 
+ .glitch:before,
+ .glitch:after {
+    display: block;
+    content: attr(data-glitch);
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 0.8;
+ }
+ 
+ .glitch:before {
+    animation: glitch-color 0.3s cubic-bezier(0.25, 0.46, 0.45, 0.94) both infinite;
+    color: #00ffff;
+    z-index: -1;
+ }
+ 
+ .glitch:after {
+    animation: glitch-color 0.3s cubic-bezier(0.25, 0.46, 0.45, 0.94) reverse both infinite;
+    color: #ff00ff;
+    z-index: -2;
+ }
+ 
+ @keyframes glitch-color {
+    0% {
+       transform: translate(0);
+    }
+ 
+    20% {
+       transform: translate(-3px, 3px);
+    }
+ 
+    40% {
+       transform: translate(-3px, -3px);
+    }
+ 
+    60% {
+       transform: translate(3px, 3px);
+    }
+ 
+    80% {
+       transform: translate(3px, -3px);
+    }
+ 
+    to {
+       transform: translate(0);
+    }
+ }
+
+ .glitch-noise {
+    font-size: 80px;
+    font-weight: 700;
+    line-height: 1.2;
+    letter-spacing: 5px;
+    z-index: 1;
+ }
+ 
+ .glitch-noise:before {
+    content: attr(data-glitch);
+    position: absolute;
+    top: 0;
+    left: -2px;
+    width: 100%;
+    color: #000;
+    background-color: aliceblue;
+    overflow: hidden;
+    clip: rect(0, 900px, 0, 0);
+    animation: noise-before 3s infinite linear alternate-reverse;
+ }
+ 
+ .glitch-noise:after {
+    content: attr(data-glitch);
+    position: absolute;
+    top: 0;
+    left: 2px;
+    width: 100%;
+    color: #000;
+    background-color: aliceblue;
+    overflow: hidden;
+    clip: rect(0, 900px, 0, 0);
+    animation: noise-after 2s infinite linear alternate-reverse;
+ }
+ 
+ @keyframes noise-before {
+    0% {
+       clip: rect(61px, 9999px, 52px, 0);
+    }
+ 
+    5% {
+       clip: rect(33px, 9999px, 144px, 0);
+    }
+ 
+    10% {
+       clip: rect(121px, 9999px, 115px, 0);
+    }
+ 
+    15% {
+       clip: rect(144px, 9999px, 162px, 0);
+    }
+ 
+    20% {
+       clip: rect(62px, 9999px, 180px, 0);
+    }
+ 
+    25% {
+       clip: rect(34px, 9999px, 42px, 0);
+    }
+ 
+    30% {
+       clip: rect(147px, 9999px, 179px, 0);
+    }
+ 
+    35% {
+       clip: rect(99px, 9999px, 63px, 0);
+    }
+ 
+    40% {
+       clip: rect(188px, 9999px, 122px, 0);
+    }
+ 
+    45% {
+       clip: rect(154px, 9999px, 14px, 0);
+    }
+ 
+    50% {
+       clip: rect(63px, 9999px, 37px, 0);
+    }
+ 
+    55% {
+       clip: rect(161px, 9999px, 147px, 0);
+    }
+ 
+    60% {
+       clip: rect(109px, 9999px, 175px, 0);
+    }
+ 
+    65% {
+       clip: rect(157px, 9999px, 88px, 0);
+    }
+ 
+    70% {
+       clip: rect(173px, 9999px, 131px, 0);
+    }
+ 
+    75% {
+       clip: rect(62px, 9999px, 70px, 0);
+    }
+ 
+    80% {
+       clip: rect(24px, 9999px, 153px, 0);
+    }
+ 
+    85% {
+       clip: rect(138px, 9999px, 40px, 0);
+    }
+ 
+    90% {
+       clip: rect(79px, 9999px, 136px, 0);
+    }
+ 
+    95% {
+       clip: rect(25px, 9999px, 34px, 0);
+    }
+ 
+    100% {
+       clip: rect(173px, 9999px, 166px, 0);
+    }
+ }
+ 
+ @keyframes noise-after {
+    0% {
+       clip: rect(26px, 9999px, 33px, 0);
+    }
+ 
+    5% {
+       clip: rect(140px, 9999px, 198px, 0);
+    }
+ 
+    10% {
+       clip: rect(184px, 9999px, 89px, 0);
+    }
+ 
+    15% {
+       clip: rect(121px, 9999px, 6px, 0);
+    }
+ 
+    20% {
+       clip: rect(181px, 9999px, 99px, 0);
+    }
+ 
+    25% {
+       clip: rect(154px, 9999px, 133px, 0);
+    }
+ 
+    30% {
+       clip: rect(134px, 9999px, 169px, 0);
+    }
+ 
+    35% {
+       clip: rect(26px, 9999px, 187px, 0);
+    }
+ 
+    40% {
+       clip: rect(147px, 9999px, 137px, 0);
+    }
+ 
+    45% {
+       clip: rect(31px, 9999px, 52px, 0);
+    }
+ 
+    50% {
+       clip: rect(191px, 9999px, 109px, 0);
+    }
+ 
+    55% {
+       clip: rect(74px, 9999px, 54px, 0);
+    }
+ 
+    60% {
+       clip: rect(145px, 9999px, 75px, 0);
+    }
+ 
+    65% {
+       clip: rect(153px, 9999px, 198px, 0);
+    }
+ 
+    70% {
+       clip: rect(99px, 9999px, 136px, 0);
+    }
+ 
+    75% {
+       clip: rect(118px, 9999px, 192px, 0);
+    }
+ 
+    80% {
+       clip: rect(1px, 9999px, 83px, 0);
+    }
+ 
+    85% {
+       clip: rect(145px, 9999px, 98px, 0);
+    }
+ 
+    90% {
+       clip: rect(121px, 9999px, 154px, 0);
+    }
+ 
+    95% {
+       clip: rect(156px, 9999px, 44px, 0);
+    }
+ 
+    100% {
+       clip: rect(67px, 9999px, 122px, 0);
+    }
+ }
+ 
 .card{
-    position:relative;
+    position:absolute;
     width: 400px;
     height: 580px;
     border-radius: 10px;
     transition: 0.5s;
     transform-style: preserve-3d;
-    transform: rotateY(180deg) rotateZ(0deg);
     margin: 0 !important;
+    transform: translate(-50%,-50%);
     z-index: 3;
 }
 #monstercard{
-    top: 0;
-    left: 0;
+    top: 25%;
+    left: 25%;
 }
 .mypic{
     position: inherit;
@@ -175,8 +621,8 @@ H1{
     font-family: 'Didact Gothic', sans-serif;
     font-size: 25px;
     position: relative;
-    left: 230px;
-    top: 45px;
+    left: 30px;
+    top: 33px;
 }
 /* star levels */
 #starLevel {
@@ -376,4 +822,27 @@ H1{
 .arts img{
     width: 15vw;
     height: auto;
+}
+
+#shadowbox{
+    position: fixed;
+    background: rgba(0, 0, 0, 0.5);
+    bottom: 0;
+    left: 0;
+    opacity: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    right: 0;
+    top: 0;
+    visibility: hidden;
+    z-index: 10;
+    -webkit-transition: opacity 200ms linear;
+    -moz-transition: opacity 200ms linear;
+    -ms-transition: opacity 200ms linear;
+    -o-transition: opacity 200ms linear;
+    transition: opacity 400ms linear;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
